--- a/app/src/components/Manage/index.scss
+++ b/app/src/components/Manage/index.scss
@@ -22,9 +22,11 @@
 
 .col {
   flex: 0 1 auto;
+  margin: 15px;
 }
 
-.list-col {
-  margin: 15px;
-  margin-left: 30px;
+.defect-col {
+}
+
+.rt-tr.red {
 }
