--- a/app/src/components/Manage/index.scss
+++ b/app/src/components/Manage/index.scss
@@ -1,6 +1,14 @@
+header {
+  background-color: #082767;
+}
+
 .title {
+  color: #FFF;
+  margin: 0;
+  padding: 0.6em;
   width: 100%;
   text-align: center;
+  font-size: 28px;
 }
 
 .danger {
