--- a/app/src/style/index.scss
+++ b/app/src/style/index.scss
@@ -1,5 +1,9 @@
-@import '~bootstrap/dist/css/bootstrap.css';
+@import "~bootstrap/dist/css/bootstrap.css";
 
 body {
-  background-color: #FFF;
+  background-color: #fff;
+}
+
+label {
+  margin-bottom: 0;
 }
