--- a/app/src/components/Home/index.scss
+++ b/app/src/components/Home/index.scss
@@ -2,7 +2,7 @@
   text-align: center;
 
   .rt-tr-group:hover {
-    background-color: #DDD;
+    background-color: #ddd;
     cursor: pointer;
   }
 
@@ -17,15 +17,6 @@ header {
   background-color: #082767;
 }
 
-.title {
-  color: #FFF;
-  margin: 0;
-  padding: 0.6em;
-  width: 100%;
-  text-align: center;
-  font-size: 28px;
-}
-
 .rt-thead {
-  background-color: #EDA241;
+  background-color: #eda241;
 }
