--- a/app/src/components/Header/index.scss
+++ b/app/src/components/Header/index.scss
@@ -4,11 +4,31 @@
   padding: 0.6em;
   width: 100%;
   text-align: center;
-  font-size: 28px;
+  font-size: 32px;
 }
 
 .back-btn {
   position: absolute;
+  color:white;
   top: 20px;
   left: 20px;
+  font-size: 20px;
+}
+
+.back-btn:hover {
+  cursor:pointer;
+  color: #DDD;
+}
+
+.centeredLogo {
+  display: flex;
+  justify-content: center;
+}
+
+.logoImage {
+  display:inline;
+  margin-top: 5px;
+}
+.logoText {
+  display:inline;
 }
